Recolored logo, fixed clipping, fixed animations.

--- a/src/Dancify/Dancify.css
+++ b/src/Dancify/Dancify.css
@@ -37,7 +37,7 @@ body::-webkit-scrollbar-track {
 
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
-  background-color: #16131d;
+  background-color: var(--app-background-color);
 }
 
 .Dancify .Panes {
