--- a/src/Login/login.css
+++ b/src/Login/login.css
@@ -35,22 +35,30 @@ body {
     display: flex;
     justify-content: center;
     font-size: 7em;
+    text-shadow: 0 0 6px #8efca0a7;
+
     margin: 5px;
-    color: #22DA63;
+    color: #8EFCA1;
     opacity: 0;
+    
     /* -webkit-text-stroke: 1px;
     -webkit-text-stroke-color: var(--app-background-color); */
 
-    animation: title-animation 2s 4s infinite, fade-in 1s 1s forwards;
+    animation: fade-in 2s forwards;
 }
 
 /* TODO: Sync these animations using animation.ready, iterationStart, etc. */
 
 /* @keyframes title-animation {
-    0% {color: #22DA63;}
-    33% {color: #009FFF;}
-    66% {color: #FC7E00;}
-    100% {color: #22DA63;}
+    0% {opacity: 0;}
+    10% {opacity: 0;}
+    10% {opacity: 1;}
+    12% {opacity: 0;}
+    14% {opacity: 1;}
+    20% {opacity: 0;}
+    60% {opacity: 0;}
+    60% {opacity: 1;}
+    100% {opacity: 1;}
 } */
 
 
@@ -62,8 +70,8 @@ body {
     display: flex;
     flex-direction: column;
     align-self: center;
-
     align-items: center;
+    flex-shrink: 1;
 
     width: 20vw;
 
@@ -76,7 +84,10 @@ body {
 }
 
 .Login .logo-wrapper {
-    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 30px;
 }
 
@@ -86,11 +97,11 @@ body {
 
 .Login button {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: white;
+    color: var(--app-background-color);
     font-size: 1.25em;
 
-    background-color: rgba(30, 215, 96, 1);
-    box-shadow: 0 0 20px rgba(30, 215, 96, 0.2);
+    background-color: #8EFCA1;
+    box-shadow: 0 0 12px #8efca0a7;
     opacity: 0;
 
     width: 200px;
@@ -99,10 +110,10 @@ body {
     margin: 10px;
     margin-bottom: 30px;
 
-    border: solid #6D6D6D 1px;
+    border: solid #8EFCA1 1px;
     border-radius: 5px;
 
-    animation: button-animation 2s 4s infinite, fade-in 1s 1s forwards;
+    animation: fade-in 2s forwards;
 }
 
 /* @keyframes button-animation {
@@ -117,8 +128,7 @@ body {
 }
 
 .Login button:hover {
-    background-color: rgb(23, 200, 85);
-    box-shadow: 0 0 20px rgba(13, 232, 89, 0.2);
+    box-shadow: 0 0 20px #8efca0a7;
     transform: scale(1.02);
 
     transition: all 100ms ease-in-out;
